src/main/webapp/app/layouts/navbar/navbar.component.scss
@import '~bootstrap/scss/functions';
@import '~bootswatch/dist/flatly/variables';
@import '~bootstrap/scss/variables';

/* ==========================================================================
Navbar
========================================================================== */

.navbar-version {
  font-size: 0.65em;
  color: $navbar-dark-color;
}

.profile-image {
  height: 1.75em;
  width: 1.75em;
}

.navbar {
  position: fixed; //makes the nav bar fixed when scrolling down/up
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1100;
  padding: 0.2rem 0rem;
  .dropdown-item.active,
  .dropdown-item.active:focus,
  .dropdown-item.active:hover {
    background-color: $dark;
  }

  a.nav-link {
    font-weight: 600;
  }

  .navbar-toggler {
    /*
    &:hover {
      color: $navbar-dark-hover-color;
    }
    */
  }
}

/* ==========================================================================
Logo styles
========================================================================== */
.logo-img {
  height: 45px;
  width: 45px;
  display: inline-block;
  vertical-align: middle;
  background: url('../../../content/images/FootballIcon.png') no-repeat center center;
  background-size: contain;
}

// CSS By Muneeb:

.navbar {
  background-color: #029352;
}

.navbar-toggler {
  color: #ffffff;
  border-color: #ffffff;
}

a.nav-link {
  color: #ffffff;
  font-family: Arial;
  font-weight: 550;
  padding: 0.5em;
}
a.nav-link:hover {
  background-color: #02a65c;
}

.selectedNavBarItem {
  //background-color: #02a65c;
  font-weight: 800;
}

.test {
  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');

  $dark-color: #111;
  $light-color: #eee;
  $bg-color: #4c6fff;

  *,
  * *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  body {
    margin: 0;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    font-family: Poppins, serif;
  }

  h1 {
    margin-right: 20px;
    user-select: none;
  }

  .dark-label {
    display: block;
    margin: 20px 0;
    height: 31px;
    width: 60px;
    border: 2px solid $bg-color;
    border-radius: 30px;
    position: relative;
    cursor: pointer;

    .ball {
      position: absolute;
      width: 25px;
      height: 25px;
      top: 1px;
      left: 1px;
      border-radius: 50%;
      background-color: $bg-color;
      transition: 300ms;
      z-index: 99;
    }

    #dark-checkbox {
      position: absolute;
      visibility: hidden;
    }

    #dark-checkbox:checked + .ball {
      transform: translateX(28px);
    }

    .moon-svg,
    .sun-svg {
      width: 16px;
      height: 16px;
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
    }

    .sun-svg {
      left: 5px;
    }

    .moon-svg {
      right: 5px;
    }
  }

  .dark {
    transition: all 1s;
    background-color: $dark-color;
    color: $light-color;

    .sun-svg,
    .moon-svg {
      fill: $light-color;
    }
  }
}

